--- a/index.html
+++ b/index.html
@@ -35,28 +35,27 @@
 
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="images/PhiPhiIslands.jpg" class="d-block w-100"
-      data-bs-toggle="tooltip" data-bs-placement="top" title="Phi Phi Islands">
+      <img src="images/PhiPhiIslands.jpg" class="d-block w-100 tooltip-img">
     </div>
 
     <div class="carousel-item">
-      <img src="images/Sukhothai.jpg" class="d-block w-100">
+      <img src="images/Sukhothai.jpg" class="d-block w-100 tooltip-img">
     </div>
 
     <div class="carousel-item">
-      <img src="images/PhangNga.jpg" class="d-block w-100">
+      <img src="images/PhangNga.jpg" class="d-block w-100 tooltip-img">
     </div>
 
     <div class="carousel-item">
-      <img src="images/HuaHin.jpg" class="d-block w-100">
+      <img src="images/Ayutthaya.jpg" class="d-block w-100 tooltip-img">
     </div>
 
     <div class="carousel-item">
-      <img src="images/Ayutthaya.jpg" class="d-block w-100">
+      <img src="images/HuaHin.jpg" class="d-block w-100 tooltip-img">
     </div>
 
     <div class="carousel-item">
-      <img src="images/FloatingMarket.jpg" class="d-block w-100">
+      <img src="images/FloatingMarket.jpg" class="d-block w-100 tooltip-img">
     </div>
   </div>
 
@@ -69,6 +68,35 @@
   </button>
 
 </div>
+
+<script>
+
+var content = 
+[{"id":1,"name":"Phi Phi Islands","desc":"Koh Phi Phi or Phi Phi Islands are located in the middle of the Andaman sea, 42 km away from Amphoe Mueang. It is a part of Nopharat Thara Beach – Phi Phi Islands national park which contains 2 big islands – Koh Phi Phi Don and Koh Phi Phi Le, and 4 smaller islands nearby – Koh Yung, Koh Mai Phai, Koh Pida Nok and Koh Pida Nai."},
+{"id":2,"name":"Sukhothai Historical Park","desc":"Sukhothai Historical Park location's is at the opposite of Ramkhamhaeng National museum. There a lot of interesting place inside this area. Wat Maha That. This temple is a center of the historical park. Inside the temple is the grand pagoda that surround by another 8 pagodas as if they are a lotus."},
+{"id":3,"name":"Ko Ta Pu","desc":"Ko Khao Phing Kan is an island in Thailand, in Phang Nga Bay northeast of Phuket. About 40 metres (130 ft) from the shores of Khao Phing Kan lies a 20-metre (66 ft) tall islet called Ko Ta Pu"},
+{"id":4,"name":"Ayutthaya","desc":"Thailand’s former capital Ayutthaya is renowned for its temple ruins and historical sites. Most visitors head first to Ayutthaya Historical Park, a UNESCO World Heritage Site located in the centre of the city, for a comprehensive overview of the city’s history and past glory. Surrounded by these ruins, it’s not difficult to imagine the grandeur that once was the kingdom of Ayutthaya."},
+{"id":5,"name":"Hua Hin","desc":"Hua Hin is one of the top tourist destinations of Thailand from its great amount of attractions and activities - plus it isn’t far from Bangkok. The city has many incredible Beaches, mountains, viewpoints, Temples, night markets, water parks, and fine diners for you to choose from and enjoy at any time of the year."},
+{"id":6,"name":"Damnoen saduak floating market","desc":"Damnoen saduak Floating Market in Ratchaburi is one of the most popular floating markets in Thailand. Every day many Thai and foreign tourists travel here to shop, eat, and absorb the atmosphere of Thailand water markets that have been like this for over a 100 years."}
+];
+
+
+var images = document.querySelectorAll(".tooltip-img");
+
+images.forEach(function(img, index){
+  img.setAttribute("data-bs-toggle", "tooltip");
+  img.setAttribute("data-bs-placement", "top");
+  img.setAttribute("title", content[index].desc);
+});
+
+
+var tooltipTriggerList = [].slice.call(
+  document.querySelectorAll('[data-bs-toggle="tooltip"]')
+);
+tooltipTriggerList.map(function (tooltipTriggerEl) {
+  return new bootstrap.Tooltip(tooltipTriggerEl);
+});
+</script>
 
 </body>
 </html>
